--- a/app/views/locations/show.html.erb
+++ b/app/views/locations/show.html.erb
@@ -15,4 +15,4 @@
 </table>
 
 <%= link_to "Back", root_path %>
-<%= link_to "Delete" ,  root_path, method: :delete, data: {confirm:"are you sure?"} %>
+<%= link_to "Delete" ,  locations_path,method: :delete,data: {confirm:"are you sure?"} %>
