--- a/app/views/locations/index.html.erb
+++ b/app/views/locations/index.html.erb
@@ -31,52 +31,28 @@
 </table>
 
 </div>
-<form>
+<form method="get" action="/locations/filter">
 <div class="div2center" align="center">
 
 <h1>Filter</h1>
 
 <label for="startat">Start at</label>
 <input type="date" name="start_at">
+
 <label for="endat">End at</label>
 <input type="date" name="end_at">
+
 <label for="startkm">Start km</label>
 <input type="number" name="start_km">
+
 <label for="endkm">End km</label>
 <input type="number" name="end_km">
 
 </div>
-	<input type="button" name="result" value="Result">
+	<input type="submit" value="Result">
 
 </form>
 <div class="div3center" align="center">
 
-
-<h1>Result</h1>
-
-
-
-<table id="result" border="1px solid" align="center" style="width: 200px height: 30px">
-	<tr>
-		<th> Location</th>
-		<th>Date</th>
-		<th>Start km</th>
-		<th>End km</th>
-
-	</tr>
-<%= filter_location %>
-
-  <% @location.each do |location| %>
-
-	<tr>
-<td><%=location.name %></td>
-<td><%= location.date%></td>
-<td><%= location.start_km%></td>
-<td><%= location.end_km%></td>
-
-	</tr>
-
-<% end %>
-</table>
 
 </div>
